--- a/ENQ-Experimenting/RequestClosureConsoleApp/RequestClosureConsoleApp.csproj
+++ b/ENQ-Experimenting/RequestClosureConsoleApp/RequestClosureConsoleApp.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9BCB9CD6-C6EF-4AB5-917A-DBD74019FEEA}</ProjectGuid>
+    <ProjectGuid>{7924AFBF-024A-44E5-90B5-D2EE386133B4}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SubscribeWithLoggerConsoleAppNamespace</RootNamespace>
-    <AssemblyName>SubscribeWithLoggerConsoleAppAssembly</AssemblyName>
+    <RootNamespace>RequestClosureConsoleAppNamespace</RootNamespace>
+    <AssemblyName>RequestClosureConsoleAppAssembly</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,11 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EasyNetQ">
-      <HintPath>..\..\..\EasyNetQ\Source\EasyNetQ\bin\Debug\EasyNetQ.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog, Version=2.0.1.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NLog.2.0.1.2\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\PublishConsoleApp\bin\Debug\EasyNetQ.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,25 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyLogger.cs" />
+    <Compile Include="MyRequest.cs" />
+    <Compile Include="MyResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Content Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </Content>
-    <None Include="NLog.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PublishConsoleApp\PublishConsoleApp.csproj">
-      <Project>{C2499E62-8229-4C19-90E8-1C12B60AB8CE}</Project>
-      <Name>PublishConsoleApp</Name>
+    <ProjectReference Include="..\SubscribeWithLoggerConsoleApp\SubscribeWithLoggerConsoleApp.csproj">
+      <Project>{9BCB9CD6-C6EF-4AB5-917A-DBD74019FEEA}</Project>
+      <Name>SubscribeWithLoggerConsoleApp</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
